--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ ol {
 
 img {
     display: block;
+    max-width: 100%;
 }
 
 body {
@@ -43,11 +44,11 @@ body {
 }
 
 .container {
-    width: 1152px;
+    width: 1158px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .page-header-container {
@@ -56,8 +57,6 @@ body {
 }
 
 .page-header {
-    padding-top: 24px;
-    padding-bottom: 24px;
     background: var(--color-white);
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
@@ -103,6 +102,12 @@ body {
     color: var(--color-accent);
 }
 
+.menu-item {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    
+}
+
 
 .menu-link {
     font-weight: 500;
@@ -110,6 +115,8 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--color-title);
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .contacts {
@@ -122,6 +129,8 @@ body {
     letter-spacing: 0.02em;
     color: var(--color-text);
     margin-right: 40px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .contact-mail:hover,
@@ -134,6 +143,8 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--color-text);
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .contact-phone-number:hover,
@@ -155,8 +166,8 @@ body {
 }
 
 .hero {
-    padding-top: 172px;
-    padding-bottom: 172px;
+    padding-top: 192px;
+    padding-bottom: 192px;
     background: var(--color-title);
     text-align: center;
 }
@@ -209,21 +220,21 @@ body {
 }
 
 .about-item {
-    flex-basis: calc(100%/4)
+    width: calc((100%-72px)/4);
 }
 
 .about-title,
 .filter-title {
     position: absolute;
-        width: 1px;
-        height: 1px;
-        margin: -1px;
-        border: 0;
-        padding: 0;
-        white-space: nowrap;
-        clip-path: inset(100%);
-        clip: rect(0 0 0 0);
-        overflow: hidden;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .about-list-title {
@@ -249,6 +260,10 @@ body {
     padding-top: 0;
 }
 
+.work-item {
+    width: calc((100%-48px)/3);
+}
+
 .works-title,
 .team-title {
     font-weight: 500;
@@ -265,10 +280,12 @@ body {
 .team-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
-
+    
 }
 
+.work-list:not(:last-child) {
+    margin-right: 24px;
+}
 
 
 /* =====================TEAM===================== */
@@ -303,11 +320,10 @@ body {
 
 .team-item {
     background: var(--color-white);
-    padding: 0px 0px 32px;
-    width: 264px;
-    height: 380px;
-    left: 156px;
-    top: 1783px;
+    width: calc((100%-72px)/4);
+}
+.team-item:not(:last-child) {
+    margin-right: 24px;
 }
 
 /* ================FOOTER===================== */
