--- a/css/styles.css
+++ b/css/styles.css
@@ -276,11 +276,14 @@ body {
     margin-bottom: 72px;
 }
 
-.work-list,
-.team-list {
+.work-list {
     display: flex;
     flex-wrap: wrap;
     
+}
+
+.team-list {
+    display: flex;
 }
 
 .work-list:not(:last-child) {
@@ -371,12 +374,24 @@ body {
 /* =================FILTER================== */
 
 .btn:hover,
-.btn:focus {
+.btn:focus,
+.btn:active {
     color: var(--color-white);
-    background: var(--color-accent);
+    background-color: var(--color-accent);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
+    border: 1px solid var(--color-accent);
 }
+
+.btn-active {
+    color: var(--color-white);
+    background-color: var(--color-accent);
+    border: 1px solid var(--color-accent);
+}
+
+
+
+
 
 /* =================PORTFOLIO================== */
 
@@ -399,20 +414,26 @@ body {
 
 .filter-list {
     display: flex;
-    padding-top: 96px;
-    padding-bottom: 72px;
     text-align: center;
     gap: 24px;
     width: 586px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 92px;
+    margin-bottom: 72px;
 }
-
 
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    margin-top: -48px;
+    margin-left: -24px;
+}
+
+.portfolio-item {
+    width: calc(100%/3 - 24px);
+    margin-left: 24px;
+    margin-top: 48px;
 }
 
 .filter {
